--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
             </div>
        </div>
+       <!--
        <div class="column-hints">
         <p>
             <strong>Horizontal Clues</strong>
@@ -22,7 +23,7 @@
                 
             </ul>
         </p>
-       </div>
+       </div>-->
     </body>
     <footer>
         <link href="./style.css" rel="stylesheet" />
