--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
             </ul>
         </p>
        </div>-->
+       <div style="position: fixed; bottom: 0; right: 0; background-color: gray; font-size: 1em; padding: 1em">
+            abc
+       </div>
     </body>
     <footer>
         <link href="./style.css" rel="stylesheet" />
